# syktsu

./: .taurignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  docker-compose.yaml  index.html
.cargo/: config.toml
infrastructure/auth_server/: Cargo.toml  Rocket.toml
infrastructure/auth_server/src/: Rocket.toml  db.rs  main.rs
infrastructure/db/: Dockerfile  db.json  docker-compose.yaml
interface/: Cargo.toml
interface/src/: lib.rs
public/fonts/: CustomSymbols.eot  HeaderSymbols.eot  Onest.eot  PPRightGrotesk-SpatialBlack.eot
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  handlers.rs  main.rs  state.rs
src/app/: mod.rs
src/app/config/: api.rs  db_keys.rs  mod.rs
src/app/router/: mod.rs
src/app/styles/: bootstrap.scss  styles.scss
src/app/styles/foundation/: _actions.scss  _align.scss  _base_props.scss  _display.scss  _opacity.scss  _overflow.scss  _position.scss  _variables.scss  _visibility.scss
src/components/: bread_crumbs.rs  button.rs  header.rs  input.rs  mod.rs  panorama.rs
src/pages/: home.rs  login.rs  mod.rs  profile.rs  university.rs
src/shared/: config.rs  error.rs  mod.rs  prelude.rs  response.rs
src/utils/: mod.rs
test/: db.json  routes.json
