[package]
name = "product-ui"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
yew-more-hooks = "0.3"
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
tracing = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[workspace]
members = [ "infrastructure/auth_server", "infrastructure/file_storage","src-tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.dev]
# ( faster build )
codegen-units = 256
# optimization for size
opt-level = 's'
incremental = true

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size
opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
incremental = false

