[package]
name = "app_interface"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rocket = { version = "0.5", features = ["secrets", "json"], optional = true }

[features]
backend = ['dep:rocket']
