[package]
name = "frontend"
version = "0.1.0"
description = "A Product App"
authors = ["Kӧрт Айка"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.15", features = ["protocol-asset"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = {version = "0.7.4", features = ["mysql"] }
tokio = "1.37.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
