[package]
name = "auth_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
rocket = { version = "0.5", features = ["secrets", "json"] }
app_interface = { path = "../../interface" }
sqlx = {version = "0.7.4", features = ["mysql"]}
mysql = "25.0.0"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_mysql"]
jwt = "*"